--- a/大数据.md
+++ b/大数据.md
@@ -153,6 +153,59 @@ static:静态的【修饰属性和方法】
         3. 调用当前类的构造方法：super(参数)
 3. 多态
 
+   1. 概念：同一引用类型，通过不同的实例执行不同的操作
+
+   2. 多态的实现要素
+
+      1. 继承关系
+      2. 父类引用指向子类对象
+      3. 子类重写父类抽象方法
+
+   3. 多态实现方式
+
+      1. 父类引用作为形参
+      2. 父类引用作为方法的返回值
+
+   4. 抽象类和抽象方法
+
+      
+
+      ~~~java
+      1、
+      //抽象类：语法：
+      public abstract class 类名{}
+      //抽象类、抽象方法：语法
+      public abstract 返回值类型 方法名(){}
+      2、
+      //抽象方法：特点
+      1、抽象方法没有方法体
+      2、抽象方法所在的类必须是抽象类
+      3、抽象方法必须被子类重写，抽非子类是抽象类
+      ~~~
+
+   5. 向上转型和向下转型
+
+      1. 向上转型：自动类型转换，子类转为父类类型
+      2. 向下转型：强制转换，父类类型转为子类类型
+
+   6. instanceof关键字
+
+      1. 判断对象类型：对象 instanceof 类型
+      2. 通常和向下转型结合使用
+
+   7. 动态绑定和静态绑定
+
+      1. 动态绑定（实例方法）
+         1. 跟引用变量实际隐痛的对象进行绑定，调用的是重写后的方法
+         2. 运行时由JVM决定
+
+      2. 静态绑定（静态方法、实例变量、静态变量）
+         1. 跟引用变量的声明类型进行绑定
+         2. 编译时就已经进行绑定
+
+   8. 多态的优点：提高代码的扩展性和和维护行性
+
+
 ## Override&Overload
 
 Overload和Override特点
@@ -274,10 +327,14 @@ Set:存储一组无序唯一的数据
 
 ## ArrayList和LinkedList的区别
 
-~~~java
+~~~
 ArrayList实现类 ：底层数据结构是数组，实现长度可变
 LinkedList实现类 ：底层数据结构是链表
 ~~~
+
+## 实用类
+
+
 
 ## 构造方法的语法、作用、使用场合
 
